--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -3,11 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:paddingTop="10dp"
     android:layout_height="match_parent"
     tools:context=".Dashboard">
 
+    <EditText
+        android:id="@+id/note_box"
+        android:hint="What's in your mind"
+        android:layout_alignParentTop="true"
+        android:layout_width="0dp"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/submit"
+        android:layout_height="50dp"/>
+
+    <Button
+        android:text="Submit"
+        android:id="@+id/submit"
+        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
+        android:layout_below="@id/note_box"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
