--- a/app/src/main/res/layout/item_image_layout.xml
+++ b/app/src/main/res/layout/item_image_layout.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:elevation="1dp"
+    android:layout_marginStart="15dp"
+    android:layout_marginEnd="15dp"
+    android:layout_marginTop="5dp"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/photo"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+    <TextView
+        android:padding="10dp"
+        tools:text="Some random text"
+        android:id="@+id/note"
         android:layout_width="match_parent"
-        android:layout_height="250dp"/>
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
